Fix formatting in components.json

--- a/components.json
+++ b/components.json
@@ -1,3 +1,4 @@
+#components
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
@@ -18,3 +19,4 @@
     "hooks": "@/hooks"
   }
 }
+
